--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>テストページ</title>
+    <title>練習ウェブページ</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>これはGitHub Pages で公開する最初のページです。</p>
+    <h1>システムデザイン</h1>
+    <p>電子情報システム工学部</p>
   </body>
 </html>
+
