--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>練習ウェブページ</title>
-  </head>
-  <body>
-    <h1>システムデザイン</h1>
-    <p>電子情報システム工学部</p>
-  </body>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My GitHub Pages Site</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f5f7fa;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(120deg, #4f87ff, #6ac8ff);
+      padding: 2.5rem 1.5rem;
+      text-align: center;
+      color: #fff;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      font-weight: 700;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+      opacity: 0.9;
+    }
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1.5rem;
+    }
+    .card {
+      background: #fff;
+      border-radius: 16px;
+      padding: 1.8rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    .card h2 {
+      margin-top: 0;
+      font-size: 1.6rem;
+      border-left: 6px solid #4f87ff;
+      padding-left: 0.6rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1.8rem 0;
+      color: #777;
+      font-size: 0.9rem;
+    }
+    a {
+      color: #4f87ff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to My GitHub Page</h1>
+    <p>電気電子・半導体系学生のポートフォリオ兼ブログ</p>
+  </header>
+
+  <div class="container">
+    <div class="card">
+      <h2>About Me</h2>
+      <p>
+        電気電子工学・半導体デバイスに取り組む大学生です。<br />
+        研究・プログラミング・英語学習・投資など幅広く挑戦中。
+      </p>
+    </div>
+
+    <div class="card">
+      <h2>Projects</h2>
+      <ul>
+        <li>● MOSFET特性解析ツール（Python）</li>
+        <li>● AI × 半導体デバイスモデリング</li>
+        <li>● Raspberry Pi 自作音声アシスタント</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h2>Contact</h2>
+      <p>GitHub: <a href="#">@yourname</a></p>
+    </div>
+  </div>
+
+  <footer>
+    © 2025 My GitHub Pages Site
+  </footer>
+</body>
 </html>
+
 
