--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My GitHub Pages Site</title>
+  <title>電気電子工学科</title>
   <style>
     body {
       margin: 0;
@@ -93,5 +93,6 @@
   </footer>
 </body>
 </html>
+
 
 
